# CM3070_VSS

./: README.md  requirements.txt
Reports/: Introduction.docx  Pitch_Idea_submission_for_peer_review.pptx  Project_proposal_pitch_idea.docx  document_of_ideas.docx  literature_review.docx
py_subsense_module/: MANIFEST.in  pyproject.toml  setup.py
py_subsense_module/pysubsense/: __init__.py
py_subsense_module/pysubsense.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
py_subsense_module/subsense_python_wrapper/: BackgroundSubtractorSubsensePythonWrapper.cpp  BackgroundSubtractorSubsensePythonWrapper.h
py_subsense_module/subsense_python_wrapper/test/: CMakeLists.txt  test_BackgroundSubtractorSubsensePythonWrapper.cpp
py_subsense_module/subsense_python_wrapper/test/build_linux/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  runTests  runTests[1]_include.cmake  runTests[1]_tests.cmake
py_subsense_module/subsense_python_wrapper/test/build_win/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  Test_Subsense_Python_Wrapper.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  runTests.vcxproj  runTests.vcxproj.filters  runTests[1]_include.cmake  runTests[1]_tests.cmake  test_subsense.vcxproj  test_subsense.vcxproj.filters
py_subsense_module/subsense_python_wrapper/test/build_win/Release/: runTests.exe.tmp  runTests.exp  runTests.lib  test_subsense.lib
py_subsense_module/subsense_python_wrapper/test/build_win/lib/Release/: gtest.lib  gtest_main.lib
py_subsense_module/subsense_python_wrapper/test/build_win/runTests.dir/Release/: runTests.exe.recipe
py_subsense_module/subsense_python_wrapper/test/build_win/runTests.dir/Release/runTests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
py_subsense_module/subsense_python_wrapper/test/build_win/test_subsense.dir/Release/: test_subsense.lib.recipe
py_subsense_module/subsense_python_wrapper/test/build_win/test_subsense.dir/Release/test_subsense.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
py_subsense_module/subsense_python_wrapper/test/build_win/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
py_subsense_module/subsense_python_wrapper/test/build_win/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
py_subsense_module/subsense_python_wrapper/test/build_win/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
reliant_watcher_app/: __init__.py  helper_functions.py  main.py
reliant_watcher_app/auth/: alert_receiver_info.json  gmail_credentials.json  stun_and_turn_server_auth.json  twilio_credentials.json  whatsapp_token.json
reliant_watcher_app/aws_lamdba_signal_server_code/: webrtc_lambda_signal_server.py
reliant_watcher_app/capture_frame/: __init__.py  capture_frame_main.py
reliant_watcher_app/database/: video_with_metadata.db
reliant_watcher_app/database_manager/: __init__.py  db_manager.py  db_manager_main.py
reliant_watcher_app/motion_detection/: __init__.py  motion_detection_main.py  motion_detector.py
reliant_watcher_app/motion_triggered_recording/: __init__.py  motion_triggered_recording.py
reliant_watcher_app/object_detection/: __init__.py  object_detection.py  object_detection_main.py  yolox.py
(+21 files in other folders)
