
[build-system]
requires = [
    "setuptools>=40.8.0",
    "wheel",
    "pybind11>=2.10.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "pysubsense"
version = "0.1.0"
description = "Subsense Python Wrapper using pybind11"
authors = [
  { name = "Victor Ogbogolo" }
]
requires-python = ">=3.12"
